tests/neg/abstract-tracked.scala
import scala.language.experimental.modularity
import scala.language.future

tracked trait F: // error
  val x: Int
